--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "start": "vite preview"
+    "preview": "vite preview --port $PORT",
+    "start": "vite preview --port $PORT"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.16",
